# libsvm-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DOC.md  LICENSE  README.md
.github/workflows/: ci.yml  fuzz.yml  release.yml  scientific-demo-benchmark-scheduled.yml  scientific-demo-benchmark.yml
bins/svm-predict-rs/: Cargo.toml
bins/svm-scale-rs/: Cargo.toml
bins/svm-train-rs/: Cargo.toml
crates/libsvm/: Cargo.toml
crates/libsvm/benches/: svm_bench.rs
crates/libsvm/examples/: basic_train.rs  cross_validation.rs  cross_validation_grid_search.rs  iris_classification.rs  minimal_classification.rs  model_persistence.rs  predict_from_model.rs  probability.rs
crates/libsvm/fuzz/: Cargo.toml
crates/libsvm/fuzz/fuzz_targets/: parse_model.rs  parse_problem.rs
crates/libsvm/src/: cache.rs  cross_validation.rs  error.rs  io.rs  kernel.rs  lib.rs  metrics.rs  predict.rs  probability.rs  qmatrix.rs  solver.rs  train.rs  types.rs  util.rs
crates/libsvm/tests/: property_tests.rs
data/: heart_scale.precomputed  iris.scale.precomputed
examples/: Makefile  README.md  comparison_summary.json
examples/api/: README.md
examples/basics/: README.md
examples/common/: datasets_catalog.py  download_reference_data.py  make_comparison_figure.py  run_scientific_demo.py
examples/data/: manifest.json
examples/integrations/: README.md
examples/integrations/prediction_server/: Cargo.toml  README.md  run.sh
examples/integrations/prediction_server/src/: main.rs
examples/option1_quick_proof/: README.md  config.json  run.sh
examples/option2_balanced_science/: README.md  config.json  run.sh
examples/scientific/: README.md
reference/: benchmark_report.md  benchmark_results.json  compare_summary.json  coverage_report.md  dataset_manifest.json  diff_report.txt  differential_report.md  differential_results.json  function_parity_matrix.md  libsvm_upstream_lock.json  reference_build_report.md  reference_provenance.json  revision_baseline_2026-02-10.md  revision_final_2026-02-10.md  tolerance_policy.md
scripts/: benchmark_compare.py  check_coverage_thresholds.sh  check_libsvm_reference_lock.sh  compare_references.sh  generate_differential_datasets.py  generate_precomputed_datasets.py  generate_references.sh  run_differential_suite.py  setup_reference_libsvm.sh
tests/: cli_flag_helpers.rs
(+236 files in other folders)
