[workspace]
resolver = "2"
members = [
    "crates/libsvm",
    "bins/svm-train-rs",
    "bins/svm-predict-rs",
    "bins/svm-scale-rs",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/ricardofrantz/libsvm-rs"
authors = ["Ricardo Frantz <rasfrantz@gmail.com>"]

[workspace.dependencies]
libsvm-rs = { path = "crates/libsvm", version = "0.7.0" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
# Dev
float-cmp = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
