[package]
name = "libsvm-rs"
description = "Pure Rust reimplementation of LIBSVM — SVM training and prediction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
homepage = "https://github.com/ricardofrantz/libsvm-rs"
documentation = "https://docs.rs/libsvm-rs"
keywords = ["svm", "machine-learning", "classification", "regression", "libsvm"]
categories = ["science", "algorithms"]

[dependencies]
thiserror = { workspace = true }

[features]
default = []
rayon = ["dep:rayon"]

[dependencies.rayon]
version = "1"
optional = true

[dev-dependencies]
float-cmp = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "svm_bench"
harness = false
