[package]
name = "libsvm-rs-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libfuzzer-sys = "0.4"
libsvm-rs = { path = ".." }
tempfile = "3"

[[bin]]
name = "parse_problem"
path = "fuzz_targets/parse_problem.rs"

[[bin]]
name = "parse_model"
path = "fuzz_targets/parse_model.rs"

[workspace]
members = ["."]
