[package]
name = "libsvm-rs-prediction-server"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
libsvm-rs = { path = "../../../crates/libsvm" }
